<resources>
    <string name="app_name">UILayoutTest</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="type_something">Type something</string>
    <string name="send">Send</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    <string name="text_view">Text View</string>
</resources>
