<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
              <!--android:orientation="horizontal"-->
              <!--android:layout_width="match_parent"-->
              <!--android:layout_height="match_parent">-->

    <!--&lt;!&ndash;<Button&ndash;&gt;-->
        <!--&lt;!&ndash;android:id="@+id/button_1"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_gravity="top"&ndash;&gt;-->
        <!--&lt;!&ndash;android:text="@string/button_1"/>&ndash;&gt;-->

    <!--&lt;!&ndash;<Button&ndash;&gt;-->
        <!--&lt;!&ndash;android:id="@+id/button_2"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_gravity="center_vertical"&ndash;&gt;-->
        <!--&lt;!&ndash;android:text="@string/button_2"/>&ndash;&gt;-->

    <!--&lt;!&ndash;<Button&ndash;&gt;-->
        <!--&lt;!&ndash;android:id="@+id/button_3"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_gravity="bottom"&ndash;&gt;-->
        <!--&lt;!&ndash;android:text="@string/button_3"/>&ndash;&gt;-->

    <!--<EditText-->
        <!--android:id="@+id/input_message"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:hint="@string/type_something"/>-->

    <!--<Button-->
        <!--android:id="@+id/send"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:text="@string/send"/>-->

<!--</LinearLayout>-->

<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <!--<Button-->
        <!--android:id="@+id/button_1"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:text="@string/button_1"/>-->

    <!--<Button-->
        <!--android:id="@+id/button_2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:text="@string/button_2"/>-->

    <!--<Button-->
        <!--android:id="@+id/button_3"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:text="@string/button_3"/>-->

    <!--<Button-->
        <!--android:id="@+id/button_4"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:text="@string/button_4"/>-->

    <!--<Button-->
        <!--android:id="@+id/button_5"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:text="@string/button_5"/>-->

<!--</RelativeLayout>-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/button_3"/>

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_3"
        android:layout_toStartOf="@id/button_3"
        android:text="@string/button_1"/>

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_3"
        android:layout_toEndOf="@id/button_3"
        android:text="@string/button_2"/>

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_3"
        android:layout_toStartOf="@id/button_3"
        android:text="@string/button_4"/>

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_3"
        android:layout_toEndOf="@id/button_3"
        android:text="@string/button_5"/>

</RelativeLayout>
